--- a/src/index.css
+++ b/src/index.css
@@ -8,6 +8,6 @@ body {
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: Fira code, source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
